--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ input[type="number"] {
 }
 
 .list li.plus {
-  border-right: 5pc solid #2ecc71;
+  border-right: 5px solid #2ecc71;
 }
 
 .list li.minus {
